# yac

./: .gitignore  CLAUDE.md  LICENSE  README.md
.claude/: settings.json
.claude/memory/: MEMORY.md  project-architecture.md
.github/workflows/: release.yml  update-cask.yml
docs/superpowers/plans/: 2026-05-09-brew-release.md  2026-05-09-drag-range.md  2026-05-09-fa-tab-icons.md  2026-05-09-layout-optimization.md  2026-05-09-tab-context-menu.md  2026-05-09-theme-and-icon.md
docs/superpowers/specs/: 2026-05-09-brew-tabicon-drag-design.md  2026-05-09-layout-optimization-design.md  2026-05-09-tab-context-menu-design.md  2026-05-09-theme-and-icon-design.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: fs_commands.rs  lib.rs  main.rs  pty.rs
ui/: .npmrc  index.html  package.json  pnpm-lock.yaml
ui/src/: App.tsx  aiCliPresets.ts  main.tsx  monacoSetup.ts  pathUtils.ts  settings.ts  styles.css
ui/src/components/: AiCliShortcuts.tsx  ContextMenu.tsx  EditorTabs.tsx  MonacoEditor.tsx  QuickOpen.tsx  SearchPanel.tsx  SettingsPanel.tsx  Sidebar.tsx  StatusBar.tsx  TerminalPanel.tsx
