[package]
name = "yac"
version = "0.2.3"
edition = "2021"

[lib]
name = "yac_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
crossbeam-channel = "0.5"
tauri-plugin-dialog = "2"
trash = "5"
which = "6"
